--- a/index.html
+++ b/index.html
@@ -45,15 +45,35 @@
         </div>
     <div>   
         <div class="row">
-            <div>
+            <div class="columna1">
                 <img src="img/section-3.png" width="550px">
             </div>
-            </div>
-            <div>
+            <div class="columna1">
                 <h1>Unlock your potencial in our Miami studio</h1>
                 <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p>
             </div>
-
         </div>  
+              </div>
+    <div>
+        <div class="row">
+            <div class="column-6 estilos estilos">
+                <img src="img/section-4-a.jpg" width="380px">
+            </div>
+            <div class="column-6 estilos estilos">
+                <img src="img/section-4-b.jpg" width="380px">
+            </div>
+            <div class="column-6 estilos estilos">
+                <img src="img/section-4-c.jpg" width="380px">
+            </div>
+            <div class="column-6 estilos estilos">
+                <img src="img/section-4-d.jpg" width="380px">
+            </div>
+        </div>
+    <div>   
+        <div class="row">
+            <div class="columna101">
+                <h1>Come meet us. We would love to get to know you!</h1>
+            </div>
+        </div>
 </body>
 </html>
