--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
     <div>
         <div class="row">
             <div class="column-6 estilos estilos fondo">
+                <p>Robotics</p>
                 <img src="img/section-2-a.jpeg" width="180px">
             </div>
             <div class="column-6 estilos estilos fondo">
+                <p>Sustainable</p>
                 <img src="img/section-2-b.jpeg" width="180px">
             </div>
             <div class="column-6 estilos estilos fondo">
+                <p>Digital</p>
                 <img src="img/section-2-c.jpeg" width="180px">
             </div>
             <div class="column-6 estilos estilos fondo">
+                <p>Gaming</p>
                 <img src="img/section-2-d.jpeg" width="180px">
             </div>
         </div>
@@ -73,6 +77,29 @@
         <div class="row">
             <div class="columna101">
                 <h1>Come meet us. We would love to get to know you!</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="columna3">
+                <h2>© Minds of Tomorrow,LLC. 2020</h2>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+            <div class="columna3">
+                <h2>Facebook</h2>
+                <h2>Instagram</h2>
+            </div>
+            <div class="columna3">
+                <h2>Our Programs</h2>
+                <h2>The studio</h2>
             </div>
         </div>
 </body>
