--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Minds of Tomorrow</title>
 </head>
 <body>
     <div class="foto">
-        <H1>Welcome to the creative after-school</H1>
+        <H1 class="margen">Welcome to the creative after-school</H1>
     </div>
     <div class="row">
         <div class="columna1">
