--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
     <div>
         <div class="row">
             <div class="column-6 estilos estilos">
-                <img src="img/section-4-a.jpg" width="380px">
+                <img src="img/section-4-a.jpg" width="380px" class="img1" >
             </div>
             <div class="column-6 estilos estilos">
-                <img src="img/section-4-b.jpg" width="380px">
+                <img src="img/section-4-b.jpg" width="380px" class="img2">
             </div>
             <div class="column-6 estilos estilos">
-                <img src="img/section-4-c.jpg" width="380px">
+                <img src="img/section-4-c.jpg" width="380px" class="img3">
             </div>
             <div class="column-6 estilos estilos">
-                <img src="img/section-4-d.jpg" width="380px">
+                <img src="img/section-4-d.jpg" width="380px" class="img4">
             </div>
         </div>
     <div>   
@@ -80,7 +80,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="columna3">
+            <div class="columna3-1">
+                <br>
+                <br>
+                <br>
                 <h2>© Minds of Tomorrow,LLC. 2020</h2>
                 <br>
                 <br>
@@ -89,15 +92,18 @@
                 <br>
                 <br>
                 <br>
-                <br>
-                <br>
-                <br>
             </div>
-            <div class="columna3">
+            <div class="columna3-2">
+                <br>
+                <br>
+                <br>
                 <h2>Facebook</h2>
                 <h2>Instagram</h2>
             </div>
             <div class="columna3">
+                <br>
+                <br>
+                <br>
                 <h2>Our Programs</h2>
                 <h2>The studio</h2>
             </div>
